Fix .platform.app.yaml (terminal issue ^^)

--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -1,4 +1,4 @@
-s file describes an application. You can have multiple applications
+# This file describes an application. You can have multiple applications
 # in the same project.
 
 # The name of this app. Must be unique within a project.
