--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -49,6 +49,7 @@ disk: 2048
 # The mounts that will be performed when the package is deployed.
 mounts:
     "/public/sites/default/files": "shared:files/files"
+    "/public/sites/default/config": "shared:files/config"
     "/tmp": "shared:files/tmp"
     "/private": "shared:files/private"
 
