--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -55,8 +55,10 @@ mounts:
 
 # The hooks executed at various points in the lifecycle of the application.
 hooks:
+    build: |
+      mv -f sites/default/config /
     # We run deploy hook after your application has been deployed and started.
     deploy: |
       cd public
       drush -y updatedb
-      mv -f sites/default/config /
+      drush -y cim
