--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -56,6 +56,8 @@ mounts:
 # The hooks executed at various points in the lifecycle of the application.
 hooks:
     build: |
+      pwd
+      ls -la
       mv -f sites/default/config /
     # We run deploy hook after your application has been deployed and started.
     deploy: |
