--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -56,8 +56,8 @@ mounts:
 # The hooks executed at various points in the lifecycle of the application.
 hooks:
     build: |
-      mv -f config /app/
-      ls -la sites/default/config
+      mv -f public/sites/default/config /app/
+      ls -la public/sites/default/
       ls -la /app/config
       exit 1
     # We run deploy hook after your application has been deployed and started.
