--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -49,7 +49,6 @@ disk: 2048
 # The mounts that will be performed when the package is deployed.
 mounts:
     "/public/sites/default/files": "shared:files/files"
-    "/config": "shared:files/config"
     "/tmp": "shared:files/tmp"
     "/private": "shared:files/private"
 
@@ -60,5 +59,7 @@ hooks:
     # We run deploy hook after your application has been deployed and started.
     deploy: |
       cd public
+      drush -y cache-rebuild
       drush -y updatedb
-      drush -y cim > /tmp/deploy.log
+      drush -y config-import
+      drush -y cache-rebuild
