--- a/config/system.site.yml
+++ b/config/system.site.yml
@@ -1,5 +1,5 @@
 uuid: 6533d759-36fe-44e6-95be-fc0577439b6b
-name: 'Drupal Chile | config working!'
+name: 'Drupal Chile'
 mail: web@drupalchile.org
 slogan: ''
 page:
