--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -55,7 +55,7 @@ mounts:
 # The hooks executed at various points in the lifecycle of the application.
 hooks:
     build: |
-      mv -f public/sites/default/config ../
+      mv -f public/sites/default/config /app/
     # We run deploy hook after your application has been deployed and started.
     deploy: |
       cd public
