--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -63,3 +63,5 @@ hooks:
       drush -y updatedb
       drush -y config-import
       drush -y cache-rebuild
+      drush locale-update
+      drush -y cache-rebuild
