--- a/config/core.entity_view_display.node.article.default.yml
+++ b/config/core.entity_view_display.node.article.default.yml
@@ -5,13 +5,16 @@ dependencies:
   config:
     - field.field.node.article.body
     - field.field.node.article.comment
+    - field.field.node.article.field_file
     - field.field.node.article.field_image
-    - field.field.node.article.field_tags
+    - field.field.node.article.field_links
     - image.style.large
     - node.type.article
   module:
     - comment
+    - file
     - image
+    - link
     - text
     - user
 _core:
@@ -23,35 +26,45 @@ mode: default
 content:
   body:
     type: text_default
-    weight: 0
+    weight: 1
     settings: {  }
     third_party_settings: {  }
     label: hidden
   comment:
     label: above
     type: comment_default
-    weight: 20
+    weight: 5
     settings:
       pager_id: 0
     third_party_settings: {  }
+  field_file:
+    weight: 2
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: file_default
   field_image:
     type: image
-    weight: -1
+    weight: 0
     settings:
       image_style: large
       image_link: ''
     third_party_settings: {  }
     label: hidden
-  field_tags:
-    type: entity_reference_label
-    weight: 10
+  field_links:
+    weight: 3
     label: above
     settings:
-      link: true
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
     third_party_settings: {  }
+    type: link
   links:
-    weight: 100
+    weight: 4
+    settings: {  }
+    third_party_settings: {  }
 hidden:
-  field_image: true
-  field_tags: true
   langcode: true
