--- a/config/core.entity_view_display.node.article.rss.yml
+++ b/config/core.entity_view_display.node.article.rss.yml
@@ -6,8 +6,9 @@ dependencies:
     - core.entity_view_mode.node.rss
     - field.field.node.article.body
     - field.field.node.article.comment
+    - field.field.node.article.field_file
     - field.field.node.article.field_image
-    - field.field.node.article.field_tags
+    - field.field.node.article.field_links
     - node.type.article
   module:
     - user
@@ -23,6 +24,7 @@ content:
 hidden:
   body: true
   comment: true
+  field_file: true
   field_image: true
-  field_tags: true
+  field_links: true
   langcode: true
