--- a/config/core.entity_view_display.node.article.teaser.yml
+++ b/config/core.entity_view_display.node.article.teaser.yml
@@ -6,8 +6,9 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.article.body
     - field.field.node.article.comment
+    - field.field.node.article.field_file
     - field.field.node.article.field_image
-    - field.field.node.article.field_tags
+    - field.field.node.article.field_links
     - image.style.medium
     - node.type.article
   module:
@@ -36,17 +37,11 @@ content:
       image_link: content
     third_party_settings: {  }
     label: hidden
-  field_tags:
-    type: entity_reference_label
-    weight: 10
-    settings:
-      link: true
-    third_party_settings: {  }
-    label: above
   links:
     weight: 100
 hidden:
   comment: true
+  field_file: true
   field_image: true
-  field_tags: true
+  field_links: true
   langcode: true
