User entity fields
siguen faltando cosas

--- a/config/core.entity_form_display.user.user.default.yml
+++ b/config/core.entity_form_display.user.user.default.yml
@@ -3,10 +3,13 @@ langcode: es
 status: true
 dependencies:
   config:
+    - field.field.user.user.field_user_do
+    - field.field.user.user.field_user_name
     - field.field.user.user.user_picture
     - image.style.thumbnail
   module:
     - image
+    - path
     - user
 _core:
   default_config_hash: LLAieeozVsoZDb-2PbFxRJpQqnKmpR7-4OoRJnduz-U
@@ -19,8 +22,27 @@ content:
     weight: -10
   contact:
     weight: 5
+  field_user_do:
+    weight: 31
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+  field_user_name:
+    weight: 32
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
   language:
     weight: 0
+  path:
+    type: path
+    weight: 30
+    settings: {  }
+    third_party_settings: {  }
   timezone:
     weight: 6
   user_picture:
