--- a/config/core.entity_view_display.user.user.default.yml
+++ b/config/core.entity_view_display.user.user.default.yml
@@ -3,6 +3,8 @@ langcode: es
 status: true
 dependencies:
   config:
+    - field.field.user.user.field_user_do
+    - field.field.user.user.field_user_name
     - field.field.user.user.user_picture
     - image.style.thumbnail
   module:
@@ -15,6 +17,20 @@ targetEntityType: user
 bundle: user
 mode: default
 content:
+  field_user_do:
+    weight: 6
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+  field_user_name:
+    weight: 7
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
   member_for:
     weight: 5
   user_picture:
