--- a/config/core.entity_view_display.user.user.default.yml
+++ b/config/core.entity_view_display.user.user.default.yml
@@ -3,12 +3,19 @@ langcode: es
 status: true
 dependencies:
   config:
+    - field.field.user.user.field_user_bio
     - field.field.user.user.field_user_do
+    - field.field.user.user.field_user_linkedin
+    - field.field.user.user.field_user_meetup
     - field.field.user.user.field_user_name
+    - field.field.user.user.field_user_twitter
+    - field.field.user.user.field_user_web
     - field.field.user.user.user_picture
     - image.style.thumbnail
   module:
     - image
+    - link
+    - text
     - user
 _core:
   default_config_hash: L2mtwGWH_7wDRCMIR4r_Iu_jmvQ10DV1L8ht8iNZ5qY
@@ -17,6 +24,12 @@ targetEntityType: user
 bundle: user
 mode: default
 content:
+  field_user_bio:
+    weight: 8
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
   field_user_do:
     weight: 6
     label: above
@@ -24,6 +37,28 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+  field_user_linkedin:
+    weight: 9
+    label: above
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    type: link
+  field_user_meetup:
+    weight: 11
+    label: above
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    type: link
   field_user_name:
     weight: 7
     label: above
@@ -31,6 +66,28 @@ content:
       link_to_entity: false
     third_party_settings: {  }
     type: string
+  field_user_twitter:
+    weight: 10
+    label: above
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    type: link
+  field_user_web:
+    weight: 12
+    label: above
+    settings:
+      trim_length: 80
+      url_only: false
+      url_plain: false
+      rel: ''
+      target: ''
+    third_party_settings: {  }
+    type: link
   member_for:
     weight: 5
   user_picture:
