--- a/config/core.entity_view_display.node.page.teaser.yml
+++ b/config/core.entity_view_display.node.page.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.page.body
+    - field.field.node.page.field_image
     - node.type.page
   module:
     - text
@@ -26,4 +27,5 @@ content:
   links:
     weight: 101
 hidden:
+  field_image: true
   langcode: true
