--- a/config/system.date.yml
+++ b/config/system.date.yml
@@ -1,11 +1,11 @@
 country:
   default: CL
-first_day: 0
+first_day: 1
 timezone:
   default: America/Santiago
   user:
     configurable: true
-    warn: false
+    warn: true
     default: 0
 _core:
   default_config_hash: V9UurX2GPT05NWKG9f2GWQqFG2TRG8vczidwjpy7Woo
