--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -1,67 +1,141 @@
 # This file describes an application. You can have multiple applications
 # in the same project.
+#
+# See https://docs.platform.sh/user_guide/reference/platform-app-yaml.html
 
 # The name of this app. Must be unique within a project.
-name: php
+name: 'app'
 
 # The runtime the application uses.
-type: "php:5.6"
+type: 'php:7.0'
 
-# Configuration of the build of the application.
+# Configuration of the build of this application.
 build:
-    flavor: drupal
+    flavor: composer
 
 # The build-time dependencies of the app.
 dependencies:
     php:
-        "drush/drush": "8.1.2"
+        'drush/drush': '^8.0'
+        'drupal/console': '@stable'
+    ruby:
+        sass: "3.4.7"
+    nodejs:
+        grunt-cli: "~0.1.13"
 
 # The relationships of the application with services or other applications.
+#
 # The left-hand side is the name of the relationship as it will be exposed
 # to the application in the PLATFORM_RELATIONSHIPS variable. The right-hand
 # side is in the form `<service name>:<endpoint name>`.
 relationships:
-    database: "mysql:mysql"
+    database: 'mysqldb:mysql'
+#    solr: 'solrsearch:solr'
+#    redis: 'rediscache:redis'
 
 # The configuration of app when it is exposed to the web.
 web:
     # Specific parameters for different URL prefixes.
     locations:
-        "/":
-            # The folder to serve static assets for this location from.
-            # (Relative to the application root.)
-            root: "public"
+        '/':
+            # The folder from which to serve static assets, for this location.
+            #
+            # This is a filesystem path, relative to the application root.
+            root: 'web'
 
             # How long to allow static assets from this location to be cached.
-            # (Can be a time or -1 for no caching. Times can be suffixed with
-            # "ms" (milliseconds), "s" (seconds), "m" (minutes), "h" (hours),
-            # "d" (days), "w" (weeks), "M" (months, 30d) or "y" (years, 365d).)
-            expires: -1
+            #
+            # Can be a time in seconds, or -1 for no caching. Times can be
+            # suffixed with "s" (seconds), "m" (minutes), "h" (hours), "d"
+            # (days), "w" (weeks), "M" (months, as 30 days) or "y" (years, as
+            # 365 days).
+            expires: 5m
 
             # Whether to forward disallowed and missing resources from this
             # location to the application.
-            # (Can be true, false or a URI path string.)
-            passthru: "/index.php"
+            #
+            # Can be true, false or a URI path string.
+            passthru: '/index.php'
+
+            # Deny access to static files in this location.
+            allow: false
+
+            # Rules for specific URI patterns.
+            rules:
+                # Allow access to common static files.
+                '\.(jpe?g|png|gif|svgz?|css|js|map|ico|bmp|eot|woff2?|otf|ttf)$':
+                    allow: true
+                '^/robots\.txt$':
+                    allow: true
+                '^/sitemap\.xml$':
+                    allow: true
+
+        '/sites/default/files':
+            # Allow access to all files in the public files directory.
+            allow: true
+            expires: 5m
+            passthru: '/index.php'
+            root: 'web/sites/default/files'
+
+            # Do not execute PHP scripts.
+            scripts: false
+
+            rules:
+                # Provide a longer TTL (2 weeks) for aggregated CSS and JS files.
+                '^/sites/default/files/(css|jss)':
+                    expires: 2w
+        '/sites/default/files/archives':
+            # My archive dir
+            allow: true
+            expires: 2w
+            scripts: false
+            index:
+                - index.html
+            root: 'web/sites/default/files/archives'
+
+        '/m7':
+            allow: true
+            root: 'web/m7'
+            index:
+                - index.php
+
+
 
 # The size of the persistent disk of the application (in MB).
 disk: 2048
 
 # The mounts that will be performed when the package is deployed.
 mounts:
-    "/public/sites/default/files": "shared:files/files"
-    "/tmp": "shared:files/tmp"
-    "/private": "shared:files/private"
-
+    # Drupal's
+    '/web/sites/default/files': 'shared:files/files'
+    '/tmp': 'shared:files/tmp'
+    '/private': 'shared:files/private'
+    # Piwiks'
+    '/web/m7/tmp': 'shared:files/tmp/piwik'
+    '/web/m7/config': 'shared:files/pikikConfig'
 # The hooks executed at various points in the lifecycle of the application.
 hooks:
     build: |
-      mv -f public/sites/default/config /app/
+        cd web/themes/custom/nahuelme_zen
+        npm install
+        ./node_modules/.bin/gulp styles:production
+        cd ../../../m7
+        composer install
+        wget http://geolite.maxmind.com/download/geoip/database/GeoLiteCity.dat.gz >/dev/null 2>&1
+        gunzip GeoLiteCity.dat.gz
+        mv GeoLiteCity.dat misc/GeoLiteCity.dat
     # We run deploy hook after your application has been deployed and started.
     deploy: |
-      cd public
-      drush -y cache-rebuild
-      drush -y updatedb
-      drush -y config-import
-      drush -y cache-rebuild
-      drush locale-update
-      drush -y cache-rebuild
+        cd web
+        drush -y cache-rebuild
+        drush -y updatedb
+        drush -y config-import
+        drush -y cache-rebuild
+        drush -y locale-update
+        drush -y cache-rebuild
+
+# The configuration of scheduled execution.
+crons:
+    drupal:
+        spec: '*/20 * * * *'
+        cmd: 'cd web ; drush --no-halt-on-error core-cron'
