--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -29,7 +29,7 @@ dependencies:
 # to the application in the PLATFORM_RELATIONSHIPS variable. The right-hand
 # side is in the form `<service name>:<endpoint name>`.
 relationships:
-    database: 'mysqldb:mysql'
+    database: 'mysql:mysql'
 #    solr: 'solrsearch:solr'
 #    redis: 'rediscache:redis'
 
