--- a/config/system.theme.yml
+++ b/config/system.theme.yml
@@ -1,5 +1,5 @@
 admin: seven
-default: drupalcl
+default: drupalchile
 _core:
   default_config_hash: fOjer9hADYYnbCJVZMFZIIM1azTFWyg84ZkFDHfAbUg
 langcode: es
