--- a/web/themes/custom/drupalchile/drupalchile.info.yml
+++ b/web/themes/custom/drupalchile/drupalchile.info.yml
@@ -4,7 +4,8 @@ description: Theme for Drupal 8
 package: Other
 core: 8.x
 libraries:
-  - drupalchile/global-styling
+  - drupalchile/base
+  # - drupalchile/notosans
 
 base theme: classy
 #Using Classy as a base theme https://www.drupal.org/theme-guide/8/classy
