--- a/config/block.block.drupalchile_branding.yml
+++ b/config/block.block.drupalchile_branding.yml
@@ -11,7 +11,7 @@ _core:
 id: drupalchile_branding
 theme: drupalchile
 region: header
-weight: 0
+weight: -6
 provider: null
 plugin: system_branding_block
 settings:
@@ -20,6 +20,6 @@ settings:
   provider: system
   label_display: '0'
   use_site_logo: true
-  use_site_name: true
-  use_site_slogan: true
+  use_site_name: false
+  use_site_slogan: false
 visibility: {  }
