--- a/config/block.block.drupalchile_breadcrumbs.yml
+++ b/config/block.block.drupalchile_breadcrumbs.yml
@@ -10,8 +10,8 @@ _core:
   default_config_hash: oXUb3JZR2WW5VOdw4HrhRicCsq51mCgLfRyvheG68ck
 id: drupalchile_breadcrumbs
 theme: drupalchile
-region: header
-weight: 0
+region: content
+weight: -6
 provider: null
 plugin: system_breadcrumb_block
 settings:
