--- a/config/block.block.drupalchile_footer.yml
+++ b/config/block.block.drupalchile_footer.yml
@@ -12,8 +12,8 @@ _core:
   default_config_hash: kkISXE1LT2FJEoYnqCrCpeFB-2pmGmMxMklVk7rQcfg
 id: drupalchile_footer
 theme: drupalchile
-region: header
-weight: 0
+region: footer
+weight: -6
 provider: null
 plugin: 'system_menu_block:footer'
 settings:
