--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
         "drupal/google_analytics": "~2.1",
         "drupal/dynamic_entity_reference": "~2.1",
         "drupal/badge": "dev-8.x-1.x",
-        "drupal/omega": "~5.0@alpha",
+        "drupal/omega": "~5.0@alpha"
  
     },
     "require-dev": {
